--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -74,4 +74,8 @@ body {
   left: 0;
   background: inherit;
   border-radius: inherit;
+  -webkit-border-radius: inherit;
+  -moz-border-radius: inherit;
+  -ms-border-radius: inherit;
+  -o-border-radius: inherit;
 }
