--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -1,13 +1,15 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Markdown Styling */
 
 /* Markdown Container */
-
 .markdown-class {
   @apply mt-5 p-5;
 }
 
 /* Headings */
-
 .markdown-class h1 {
   @apply mt-5 text-3xl;
 }
@@ -44,7 +46,6 @@
 }
 
 /* Markdown Lists */
-
 .markdown-class ol {
   @apply mt-5 ml-5;
 }
@@ -62,9 +63,8 @@
 }
 
 /* BlockQuote */
-
 .markdown-class blockquote {
-  @apply p-5 border-l-8 rounded-lg shadow-lg  text-sm bg-slate-200 text-black;
+  @apply p-5 border-l-8 rounded-lg shadow-lg text-sm bg-slate-200 text-black;
 }
 
 .markdown-class blockquote p {
@@ -72,7 +72,6 @@
 }
 
 /* Image */
-
 .markdown-class img {
   @apply max-h-96 w-full my-5 object-cover rounded-lg shadow-lg;
 }
